--- a/MemeThing/Views/MemeThing/Views/MemeThing/Views/Base.lproj/ViewResults.storyboard
+++ b/MemeThing/Views/MemeThing/Views/MemeThing/Views/Base.lproj/ViewResults.storyboard
@@ -16,55 +16,82 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="uSg-JO-mIM">
-                                <rect key="frame" x="20.5" y="72" width="373" height="762"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fsD-kw-tCw">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AlU-DO-Xe3">
-                                        <rect key="frame" x="0.0" y="0.0" width="373" height="627.5"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ycM-BN-aQ3">
-                                        <rect key="frame" x="0.0" y="635.5" width="373" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="sAz-qA-P0L">
-                                        <rect key="frame" x="0.0" y="664" width="373" height="37"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="uSg-JO-mIM">
+                                        <rect key="frame" x="20.5" y="19.5" width="373" height="735"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4EB-A1-VVY">
-                                                <rect key="frame" x="0.0" y="0.0" width="30" height="37"/>
-                                                <state key="normal" title="&lt;"/>
-                                            </button>
-                                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="bLi-Zs-I7l">
-                                                <rect key="frame" x="167" y="0.0" width="39" height="37"/>
-                                            </pageControl>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7mb-DM-cl2">
-                                                <rect key="frame" x="343" y="0.0" width="30" height="37"/>
-                                                <state key="normal" title="&gt;"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AlU-DO-Xe3" customClass="MemeImageView" customModule="MemeThing" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="373" height="627"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ycM-BN-aQ3">
+                                                <rect key="frame" x="0.0" y="635" width="373" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="sAz-qA-P0L">
+                                                <rect key="frame" x="0.0" y="663.5" width="373" height="33.5"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4EB-A1-VVY">
+                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="33.5"/>
+                                                        <state key="normal" title="&lt;"/>
+                                                    </button>
+                                                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="bLi-Zs-I7l">
+                                                        <rect key="frame" x="167" y="0.0" width="39" height="33.5"/>
+                                                    </pageControl>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7mb-DM-cl2">
+                                                        <rect key="frame" x="343" y="0.0" width="30" height="33.5"/>
+                                                        <state key="normal" title="&gt;"/>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NVX-Za-Jzn" customClass="SubmitButton" customModule="MemeThing" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="705" width="373" height="30"/>
+                                                <state key="normal" title="Choose as winner!"/>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NVX-Za-Jzn" customClass="SubmitButton" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="709" width="373" height="53"/>
-                                        <state key="normal" title="Choose as winner!"/>
-                                    </button>
                                 </subviews>
-                            </stackView>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="uSg-JO-mIM" firstAttribute="centerX" secondItem="fsD-kw-tCw" secondAttribute="centerX" id="0QV-2t-Zcv"/>
+                                    <constraint firstItem="uSg-JO-mIM" firstAttribute="centerY" secondItem="fsD-kw-tCw" secondAttribute="centerY" id="5cy-fq-UgQ"/>
+                                    <constraint firstItem="uSg-JO-mIM" firstAttribute="width" secondItem="fsD-kw-tCw" secondAttribute="width" multiplier="0.9" id="MM7-kR-YWB"/>
+                                    <constraint firstItem="uSg-JO-mIM" firstAttribute="height" secondItem="fsD-kw-tCw" secondAttribute="height" multiplier="0.95" id="hc3-Ug-bw6"/>
+                                </constraints>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f0B-nn-3yJ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem id="XPZ-v1-tvU">
+                                        <barButtonItem key="leftBarButtonItem" title="Main Menu" id="rWf-Jn-Zc9"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" image="ellipsis" catalog="system" id="TRQ-Lf-D8m"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="uSg-JO-mIM" firstAttribute="width" secondItem="Bo3-Gf-UQy" secondAttribute="width" multiplier="0.9" id="J66-ZE-CsI"/>
-                            <constraint firstItem="AlU-DO-Xe3" firstAttribute="height" secondItem="Bo3-Gf-UQy" secondAttribute="height" multiplier="0.7" id="Jqo-Hi-dY8"/>
-                            <constraint firstItem="uSg-JO-mIM" firstAttribute="centerY" secondItem="1UW-qO-BJN" secondAttribute="centerY" id="XdW-cn-9tA"/>
-                            <constraint firstItem="uSg-JO-mIM" firstAttribute="height" secondItem="Bo3-Gf-UQy" secondAttribute="height" multiplier="0.85" id="Xoz-18-Epb"/>
-                            <constraint firstItem="uSg-JO-mIM" firstAttribute="centerX" secondItem="1UW-qO-BJN" secondAttribute="centerX" id="uLr-Yj-6IC"/>
+                            <constraint firstItem="AlU-DO-Xe3" firstAttribute="height" secondItem="Bo3-Gf-UQy" secondAttribute="height" multiplier="0.7" id="5OF-4c-b0a"/>
+                            <constraint firstItem="1UW-qO-BJN" firstAttribute="bottom" secondItem="fsD-kw-tCw" secondAttribute="bottom" id="6Uy-Or-aEz"/>
+                            <constraint firstItem="f0B-nn-3yJ" firstAttribute="leading" secondItem="1UW-qO-BJN" secondAttribute="leading" id="8Db-4Q-KjF"/>
+                            <constraint firstItem="fsD-kw-tCw" firstAttribute="top" secondItem="f0B-nn-3yJ" secondAttribute="bottom" id="H4T-Fv-dPf"/>
+                            <constraint firstItem="fsD-kw-tCw" firstAttribute="trailing" secondItem="1UW-qO-BJN" secondAttribute="trailing" id="mkX-CS-ZVW"/>
+                            <constraint firstItem="f0B-nn-3yJ" firstAttribute="trailing" secondItem="1UW-qO-BJN" secondAttribute="trailing" id="rd4-t2-0d8"/>
+                            <constraint firstItem="fsD-kw-tCw" firstAttribute="leading" secondItem="1UW-qO-BJN" secondAttribute="leading" id="vDF-w9-0xd"/>
+                            <constraint firstItem="f0B-nn-3yJ" firstAttribute="top" secondItem="1UW-qO-BJN" secondAttribute="top" id="ztR-NW-odc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1UW-qO-BJN"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kqo-UI-5ow" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2655" y="894"/>
+            <point key="canvasLocation" x="2653.6231884057975" y="893.97321428571422"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
+    </resources>
 </document>
