--- a/MemeThing/Views/Waiting.storyboard
+++ b/MemeThing/Views/Waiting.storyboard
@@ -15,29 +15,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="waiting for other players..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uS-Iu-RsD">
-                                <rect key="frame" x="107.5" y="216" width="199" height="21"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B3v-Lj-bVa">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem id="Tzv-IC-egu">
+                                        <barButtonItem key="leftBarButtonItem" title="Main Menu" id="zUb-TL-pjC">
+                                            <connections>
+                                                <action selector="mainMenuButtonTapped:" destination="WoF-12-8qK" id="vGm-wK-DBa"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[waiting label]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uS-Iu-RsD">
+                                <rect key="frame" x="153" y="170.5" width="108" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B3v-Lj-bVa">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem id="Tzv-IC-egu">
-                                        <barButtonItem key="leftBarButtonItem" title="Exit to Main Menu" id="zUb-TL-pjC"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="2uS-Iu-RsD" firstAttribute="centerY" secondItem="KnZ-49-nEF" secondAttribute="centerY" multiplier="0.5" id="TVa-m8-Ww4"/>
-                            <constraint firstItem="2uS-Iu-RsD" firstAttribute="centerX" secondItem="KnZ-49-nEF" secondAttribute="centerX" id="bgU-ax-nqV"/>
+                            <constraint firstItem="2uS-Iu-RsD" firstAttribute="centerX" secondItem="KnZ-49-nEF" secondAttribute="centerX" id="769-XK-xvB"/>
+                            <constraint firstItem="B3v-Lj-bVa" firstAttribute="trailing" secondItem="KnZ-49-nEF" secondAttribute="trailing" id="DkW-8E-AYF"/>
+                            <constraint firstItem="B3v-Lj-bVa" firstAttribute="top" secondItem="KnZ-49-nEF" secondAttribute="top" id="hPO-6r-y3f"/>
+                            <constraint firstItem="B3v-Lj-bVa" firstAttribute="leading" secondItem="KnZ-49-nEF" secondAttribute="leading" id="pwu-aJ-mCi"/>
+                            <constraint firstItem="2uS-Iu-RsD" firstAttribute="centerY" secondItem="KnZ-49-nEF" secondAttribute="centerY" multiplier="0.4" id="pz8-kn-4cF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KnZ-49-nEF"/>
                     </view>
+                    <connections>
+                        <outlet property="waitingLabel" destination="2uS-Iu-RsD" id="Lc6-T5-lgb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KgT-Ul-lzS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
